Actualizadas las traducciones

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -921,7 +921,7 @@
     "mailer": "Mail-Controller",
     "main-address": "Hauptadresse",
     "manage": "Verwalten",
-    "manage-installation": "Administrar",
+    "manage-installation": "Verwalten",
     "manual": "Handbuch",
     "manufacturer": "Hersteller",
     "manufacturer-code": "Hersteller Code",
