--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -16,7 +16,7 @@
     "account-code-bigger-than-subaccounts": "Kod konta %code% jest dłuższy niż subkonta",
     "account-code-lower-than-parent": "Kod konta %code% jest krótszy niż rodzica",
     "account-data-missing": "Faltan datos en la cuenta",
-    "account-dot-code": "Punto para autocompletar ceros. Ejemplo: 11.1 = 1100000001",
+    "account-dot-code": "Kropka do autouzpełnienia zer. Przykład: 11.1 = 1100000001",
     "account-length": "Długość subkonta",
     "account-length-error": "Longitud de subcuenta errónea. La subcuenta %code% debe tener la longitud definida en el ejercicio.",
     "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo %saldo% pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
@@ -29,9 +29,9 @@
     "accounting-data-missing": "Nie znaleziono planu kont dla ćwiczenia %exerciseName%",
     "accounting-date": "Fecha de asiento",
     "accounting-entries": "Asientos",
-    "accounting-entry": "Asiento",
-    "accounting-entry-date": "Fecha del asiento",
-    "accounting-entry-macros-text": "<p>Puede usar palabras clave especiales (macros) para auto completar información en el campo de descripción:<\/p><dl><dt>Nombre del documento<\/dt><dd>Escriba <strong>%document%<\/strong> para agregar el identificador del documento.<\/dd><dt>Fecha actual<\/dt><dd>Escriba <strong>%date%<\/strong> para agregar la fecha actual.<\/dd><dt>Fecha de entrada<\/dt><dd>Escriba <strong>%date-entry%<\/strong> para agregar la fecha del asiento contable.<\/dd><dt>Mes<\/dt><dd>Escriba <strong>%month%<\/strong> para agregar el nombre del mes de la fecha del asiento contable.<\/dd><\/dl>",
+    "accounting-entry": "Wpis",
+    "accounting-entry-date": "Data księgowania",
+    "accounting-entry-macros-text": "<p>Możesz użyć specjalnych słów kluczowych (makr), aby automatycznie wypełnić informacje w polu opisu:<\/p><dl><dt>Nazwa dokumentu<\/dt><dd>Wpisz <strong>%document%<\/strong>, aby dodać identyfikator dokumentu.<\/dd><dt>Data bieżąca<\/dt><dd>Wpisz <strong>%date%<\/strong>, aby dodać bieżącą datę.<\/dd><dt>Data wprowadzenia<\/dt><dd>Wpisz <strong>%date-entry%<\/strong>, aby dodać datę wejścia do księgowania.<\/dd><dt>Miesiąc<\/dt><dd>Wpisz <strong>%month%<\/strong>, aby dodać nazwę miesiąca z daty księgowania.<\/dd><\/dl>",
     "accounting-entry-macros-title": "Używanie makr w polu opisu",
     "accounting-exercise-not-found": "Nie znaleziono ćwiczenia",
     "accounting-file": "Archiwum rachunkowe",
@@ -47,7 +47,7 @@
     "accrual-date": "Fecha devengo",
     "action": "Działanie",
     "actions": "Acciones",
-    "active": "Activo",
+    "active": "Aktywny",
     "actual-cost-price": "Rzeczywista cena zakupu",
     "add": "Dodaj",
     "add-all-disabled": "Dodaj wszystko wyłączone",
@@ -68,7 +68,7 @@
     "agent-commission-info": "Dotyczy tylko wybranego agenta",
     "agent-dont-have-associated-supplier": "Agent nie ma powiązanego dostawcy",
     "agents": "Agenci",
-    "alert": "Alerta",
+    "alert": "Alert",
     "alerts": "Alertas",
     "alfa-code-2": "Kod alfa 2",
     "alfa-code-3": "Código alfa 3",
@@ -131,7 +131,7 @@
     "authentication": "Uwierzytelnienie",
     "auto": "Auto",
     "auto-apply-to": "Automatycznie zastosuj do",
-    "automatic": "Automático",
+    "automatic": "Automatyczny",
     "available": "Disponible",
     "average": "Średnia",
     "average-cost": "Średnia cena",
@@ -163,7 +163,7 @@
     "block-date": "Data blokady",
     "blocked": "Zablokowany",
     "blocked-date": "Fecha de bloqueo",
-    "body": "Body",
+    "body": "Treść",
     "book": "Reservar",
     "box-closed-ok": "Kasa została prawidłowo zamknięta",
     "boxes": "Cajas",
@@ -200,7 +200,7 @@
     "cant-delete-default-payment-method": "Nie można usunąć domyślnej metody płatności",
     "cant-delete-default-serie": "No se puede eliminar la serie predeterminada",
     "cant-delete-default-tax": "Nie można usunąć domyślnego podatku",
-    "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
+    "cant-delete-default-warehouse": "Nie można usunąć domyślnego magazynu",
     "cant-delete-last-user": "Nie można usunąć ostatniego użytkownika",
     "cant-delete-variant-with-documents": "Nie można usunąć produktu lub wariantu %reference%, ponieważ został już zakupiony lub sprzedany. Możesz go jednak zablokować, jeśli chcesz.",
     "cant-load-controller": "Nie można załadować kontrolera '%controllerName%'.",
@@ -322,7 +322,7 @@
     "cost": "Coste",
     "cost-price": "Cena kosztu",
     "cost-price-policy": "Política de precio de coste",
-    "counterpart": "Contrapartida",
+    "counterpart": "Kontrahent",
     "countries": "Kraje",
     "country": "País",
     "country-not-in-eu": "%codiso% nie należy do żadnego kraju Unii Europejskiej",
@@ -374,7 +374,7 @@
     "dashboard-backup": "Kopia zapasowa",
     "dashboard-backup-p": "Przypominamy, że masz zainstalowany FacturaScripts na swoim PC, dlatego dane (faktury, klienci, itp...) są przechowywane tylko na Twoim PC. Regularnie twórz kopie zapasowe i przechowuj je z dala od komputera.",
     "dashboard-for": "Tablero de %company%",
-    "data-source": "Datos de origen",
+    "data-source": "Źródła danych",
     "database": "Baza danych",
     "database-error": "Błąd połączenia z bazą danych",
     "database-name-must-be-lowercase": "Nazwa bazy danych musi być pisana małymi literami",
@@ -405,7 +405,7 @@
     "default": "Por defecto",
     "default-customer": "Klient domyślny",
     "default-retention": "Domyślne zatrzymanie",
-    "default-role": "Grupo de usuario pred.",
+    "default-role": "Domyślna grupa użytkowników",
     "default-tax": "Impuesto predeterminado",
     "default-to-company-email": "Domyślnie na e-mail firmy",
     "default-to-user-email": "Por defecto al email del usuario",
@@ -429,7 +429,7 @@
     "departments": "Działy",
     "desc": "Opis",
     "desc-alfa-code-2": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
-    "desc-alfa-code-3": "Identificación oficial para los nombres de países y otras dependencias administrativas",
+    "desc-alfa-code-3": "Oficjalna identyfikacja dla nazw krajów i innych jednostek administracyjnych",
     "desc-business-name": "Nombre oficial del cliente, para las facturas y otros documentos.",
     "desc-business-name-2": "Nazwa fiskalna lub prawnie zarejestrowana klienta",
     "desc-customer-name": "Nombre por el cual el cliente es conocido. Para uso interno.",
@@ -479,7 +479,7 @@
     "document-without-total": "Dokument %document% bez sumy lub z sumą równą 0.",
     "documentation": "Dokumentacja",
     "documents": "Documentos",
-    "documents-generated": "Documentos generados",
+    "documents-generated": "Wygenerowane dokumenty",
     "domiciled": "Domiciliado",
     "done": "Zrealizowane",
     "done-date": "Data zakończenia",
@@ -534,10 +534,10 @@
     "epigraphs-group": "Grupa Epigrafy",
     "equivalence": "Równoważność",
     "equivalent-account-not-found": "Nie znaleziono konta równoważnego dla %accountCode% w ćwiczeniu %exerciseCode% Czy zaimportowałeś plan kont?",
-    "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
+    "equivalent-subaccount-not-found": "Nie znaleziono żadnej subkonta odpowiadającego %subAccountCode% do skopiowania.",
     "error": "BŁĄD: %error%",
     "error-checking-vat-number": "Błąd podczas sprawdzania numeru VAT '%vat-number%' w systemie VIES",
-    "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
+    "error-connecting-memcache": "Błąd połączenia z serwerem Memcache.",
     "error-deleting-lines": "Błąd podczas usuwania linii",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
     "error-on-xml-file": "Błąd w pliku XML %fileName%",
@@ -590,7 +590,7 @@
     "expenses": "Wydatki",
     "expiration": "Vencimiento",
     "expiration-type": "Tipo de vencimiento",
-    "expired": "Caducado",
+    "expired": "Wygasły",
     "expired-receipt": "Wygasły paragon",
     "export": "Eksportować",
     "export-bill": "Faktura eksportowa",
@@ -757,7 +757,7 @@
     "income-and-expenses": "Ingresos y Gastos",
     "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuento global.",
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
-    "incorrect-accounting-amount": "El importe del asiento es incorrecto.",
+    "incorrect-accounting-amount": "Kwota księgowania jest błędna.",
     "info": "Info",
     "infostate-component-title": "Informacja o stanie",
     "initial-number": "Numer początkowy",
@@ -792,7 +792,7 @@
     "invoice-number": "Numer faktury",
     "invoice-receipts-diff": "Istnieje różnica (%diff%) pomiędzy kwotą faktury a sumą jej paragonów.",
     "invoice-regularized-cant-change-date": "Faktura znajduje się w ramach regulacji %tax%. Daty nie można zmienić.",
-    "invoice-regularized-cant-delete": "La factura se encuentra dentro de una regularización de %tax% No se puede eliminar.",
+    "invoice-regularized-cant-delete": "Faktura jest w trakcie regulacji %tax% Nie można jej usunąć.",
     "invoice-without-acc-entry": "Faktura bez wpisu",
     "invoiced": "Fakturowane",
     "invoices": "Facturas",
@@ -917,7 +917,7 @@
     "macro-account-note-info": "Códigos para el reemplazo por valores",
     "mail-server-error": "Błąd połączenia z serwerem pocztowym",
     "mail-test-error": "La prueba de email ha fallado",
-    "mail-test-ok": "Prueba de email ejecutada correctamente",
+    "mail-test-ok": "Test e-mail został pomyślnie wykonany",
     "mailer": "Sterownik poczty",
     "main-address": "Główne adres",
     "manage": "Zarządzaj",
@@ -950,11 +950,11 @@
     "message": "Mensaje",
     "messages-component-title": "Komunikaty i wiadomości",
     "meta-description": "FacturaScripts es un software de facturación y contabilidad para pymes. Es software libre bajo licencia GNU\/LGPL.",
-    "method-payment": "Forma de pago",
+    "method-payment": "Metoda płatności",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
-    "minimum-stock": "Stock mínimo",
+    "minimum-stock": "Minimalny zapas",
     "minutes": "Minuty",
     "mismatched-accounting-entry": "Niezgodny zapis księgowy",
     "missing-data-epigraph-group": "Brak danych w grupie epigrafów.",
@@ -1051,7 +1051,7 @@
     "number-recipients": "Liczba odbiorców",
     "number2": "Numer 2",
     "numeric-formats": "Formaty numeryczne",
-    "numsupplier": "Núm. proveedor",
+    "numsupplier": "Nr dostawcy",
     "observations": "Uwagi",
     "october": "Octubre",
     "offsetting-account": "Konto do kompensacji",
@@ -1177,13 +1177,13 @@
     "preview": "Podgląd",
     "previous": "Poprzedni",
     "previous-balance": "Poprzedni bilans",
-    "previous-documents": "Documentos previos",
+    "previous-documents": "Dokumenty poprzednie",
     "previous-quarter": "Poprzedni kwartał",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Sprzedano wcześniej klientowi",
     "price": "Precio",
     "price-with-tax": "Precio + impuestos",
-    "principal": "Principal",
+    "principal": "Główny",
     "print": "Imprimir",
     "print-bank-data": "Imprimir cuenta bancaria",
     "print-data-records": "Imprimir todos los registros",
@@ -1262,7 +1262,7 @@
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "Zwróty",
     "register": "Registrar",
-    "register-install-ad": "Registra la instalación de FacturaScripts",
+    "register-install-ad": "Zarejestruj instalację FacturaScripts",
     "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala na pobranie jednej z naszych ekskluzywnych wtyczek. Pomaga nam także uzyskać statystyki dotyczące wersji rdzenia i PHP.",
     "register-installation": "Zarejestruj instalację",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
@@ -1376,7 +1376,7 @@
     "shipping": "Wysyłka",
     "shipping-address": "Adres dostawy",
     "shop": "Sklep",
-    "shops": "Tiendas",
+    "shops": "Sklepy",
     "short": "Corto",
     "short-name": "Krótka nazwa",
     "show": "Pokaż",
@@ -1409,7 +1409,7 @@
     "source": "Źródło",
     "source-code": "Kod źródłowy",
     "special-account": "Konto specjalne",
-    "special-accounting-entries": "Asientos especiales",
+    "special-accounting-entries": "Specjalne wpisy księgowe",
     "special-accounts": "Konta specjalne",
     "specials-actions": "Akcje specjalne",
     "spreadsheet-xls": "Archivo Excel",
@@ -1444,7 +1444,7 @@
     "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
     "subaccount-purchases": "Cuenta para compras",
     "subaccount-pyg-not-found": "Subkonto zysków i strat nie znalezione",
-    "subaccount-sales": "Cuenta de ventas",
+    "subaccount-sales": "Konto sprzedaży",
     "subaccounts": "Subkonta",
     "subfamilies": "Podrodziny",
     "subject": "Temat",
@@ -1484,7 +1484,7 @@
     "surcharge": "Recargo",
     "surname": "Nazwiska",
     "suspended": "Zawieszony",
-    "swift": "Swift\/BIC",
+    "swift": "SWIFT\/BIC",
     "symbol": "Symbol",
     "table": "Tabela",
     "table-checked": "Tabla %tableName% comprobada.",
@@ -1559,7 +1559,7 @@
     "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
     "type": "Typ",
-    "type-alert": "Tipo alert",
+    "type-alert": "Typ alarmu",
     "type-critical": "Typ krytyczny",
     "type-debug": "Tipo depurar",
     "type-emergency": "Typ awaryjny",
@@ -1667,7 +1667,7 @@
     "y-column": "Kolumna Y",
     "year": "Año",
     "year-wildcard-info": "Bieżący rok (na podstawie daty bieżącej)",
-    "yearly": "Anual",
+    "yearly": "Roczy",
     "years": "Lata",
     "yes": "Tak",
     "yesterday": "Wczoraj",
