--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -386,7 +386,7 @@
     "date-out-of-exercise-range": "A data está fora do intervalo do exercício %exerciseName%",
     "date-wildcard-info": "Data atual (data do computador)",
     "dateentry-wildcard-info": "dateentry-wildcard-info",
-    "day": "day",
+    "day": "Dia",
     "days": "dias",
     "days-log-retention": "Nº dias retenção logs",
     "days-until-expiration": "Dias até o vencimento",
@@ -677,10 +677,10 @@
     "generated-agents": "%quantity% agentes gerados.",
     "generated-at": "Gerado em %when%",
     "generated-contacts": "%quantity% contatos gerados.",
-    "generated-customer-delivery-notes": "0 notas de entrega de clientes geradas.",
+    "generated-customer-delivery-notes": "%quantity% notas de entrega de clientes geradas.",
     "generated-customer-estimations": "%quantity% orçamentos de cliente gerados.",
-    "generated-customer-groups": "0 grupos de clientes gerados.",
-    "generated-customer-orders": "0 ordens de clientes geradas.",
+    "generated-customer-groups": "%quantity% grupos de clientes gerados.",
+    "generated-customer-orders": "%quantity% ordens de clientes geradas.",
     "generated-customers": "%quantity% clientes gerados.",
     "generated-families": "%quantity% famílias geradas.",
     "generated-invoice": "Fatura gerada",
@@ -774,7 +774,7 @@
     "intra-community": "Intra-comunitária",
     "invalid-alphanumeric-code": "O código inserido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
-    "invalid-date": "Data inválida 0.",
+    "invalid-date": "Data %date% inválida.",
     "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
     "invalid-date-there-are-invoices-before": "Data inválida: %date%. A fatura %other% é anterior a esta e no entanto tem data posterior: %other-date%. Toda a fatura deve ter uma data anterior ou igual à seguinte.",
     "invalid-iban": "i",
@@ -888,7 +888,7 @@
     "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear lançamento",
-    "lock-invoice": "Bloquear fatura",
+    "lock-invoice": "Marcar emitida",
     "lock-unlock": "Bloquear-Desbloquear",
     "lock-unlock-account-entry": "Bloquear\/Desbloquear a entrada contábil",
     "locked": "Bloqueado",
@@ -1220,7 +1220,7 @@
     "pvp": "Preço de venda",
     "pvp-total": "Preço total de varejo",
     "pvp-unit": "Preço de venda ao consumidor",
-    "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
+    "pvpsindto-line-error": "Erro no valor de 'pvpsindto' da linha %reference% do documento. Valor correto: %totalWithoutDiscount%",
     "pvptotal-line-error": "Erro no valor de 'pvptotal' da linha %reference% do documento. Valor correto: %total%",
     "quantity": "Quantidade",
     "quantity-abb": "Quantidade-abrev",
@@ -1372,7 +1372,7 @@
     "settlement": "Liquidação",
     "settlement-product": "Produto de liquidação",
     "settlements": "Liquidações",
-    "setup-options": "Opções de configuração",
+    "setup-options": "Ajustar opções",
     "shipping": "Envio",
     "shipping-address": "Endereço de entrega",
     "shop": "Loja",
@@ -1414,7 +1414,7 @@
     "specials-actions": "Ações especiais",
     "spreadsheet-xls": "Arquivo Excel",
     "standard": "Padrão",
-    "start": "Inicio",
+    "start": "Início",
     "start-date": "Data de início",
     "start-hour": "Hora de início",
     "start-time": "Hora de início",
