--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -200,7 +200,7 @@
     "cant-delete-default-payment-method": "Não se pode eliminar o método de pagamento padrão",
     "cant-delete-default-serie": "Não é possível eliminar a série padrão",
     "cant-delete-default-tax": "Não é possível eliminar o imposto padrão",
-    "cant-delete-default-warehouse": "cant-delete-default-warehouse",
+    "cant-delete-default-warehouse": "Não pode eliminar o armazém por defeito",
     "cant-delete-last-user": "No se puede eliminar el último usuario",
     "cant-delete-variant-with-documents": "Não é possível excluir o produto ou variante %reference% porque já foi comprado ou vendido. No entanto, você pode bloqueá-lo se desejar.",
     "cant-load-controller": "Não é possível carregar o controlador.",
@@ -466,11 +466,11 @@
     "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "Não agrupar",
     "do-nothing": "Não fazer nada",
-    "doc-type": "Document type",
+    "doc-type": "Tipo de documento",
     "document": "Documento",
     "document-configuration": "Configuração de documentos",
     "document-report": "Relatório de documentos",
-    "document-sequence": "document-sequence",
+    "document-sequence": "Sequência de documento",
     "document-sequences": "Sequências de documentos",
     "document-states": "Estados do documento",
     "document-type": "Tipo documento",
@@ -508,7 +508,7 @@
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificação de email %name% não existe",
     "email-replies": "Respostas de e-mails",
-    "email-replies-to": "email-replies-to",
+    "email-replies-to": "As respostas a este email irão para %email%",
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
     "email-signature": "Assinatura de email",
@@ -527,7 +527,7 @@
     "enabled-plugins": "Plugins ativos",
     "encrypt": "Criptografia",
     "end-date": "Data final",
-    "end-time": "end-time",
+    "end-time": "Hora de finalização",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo Epígrafe",
     "epigraphs": "Epígrafes",
@@ -565,7 +565,7 @@
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Sobretaxa de regime especial",
     "es-tax-regime-telecom": "R",
-    "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
+    "es-tax-regime-travel": "Regime especial das agências de viagens",
     "es-tax-regime-used-goods": "Regime especial para bens usados, objetos de arte, antiguidades e objetos de coleção",
     "estimation": "Estimativa",
     "estimation-email-subject": "O seu orçamento %code%",
@@ -665,7 +665,7 @@
     "general-data": "Dados gerais",
     "generate": "Gerar",
     "generate-accounting-entries": "Gerar lançamentos",
-    "generate-accounting-entry": "generate-accounting-entry",
+    "generate-accounting-entry": "Gerar lançamento contábil",
     "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "Criar fatura",
     "generate-receipts": "Gerar recibos",
@@ -760,7 +760,7 @@
     "incorrect-accounting-amount": "O montante da entrada contabilística está incorreto.",
     "info": "Info",
     "infostate-component-title": "Status Information",
-    "initial-number": "initial-number",
+    "initial-number": "Número inicial",
     "insert-update": "Añadir o modificar",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
@@ -874,7 +874,7 @@
     "level1": "Nível 1",
     "level2": "Level 2",
     "level3": "Nível 3",
-    "level4": "Level 4",
+    "level4": "Nível 4",
     "liabilities": "Passivo",
     "library": "Biblioteca",
     "license": "Licença",
@@ -962,7 +962,7 @@
     "missing-epigraph-data": "Os dados estão faltando na epígrafe.",
     "missing-file": "Falta o arquivo",
     "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o use, mas <em>não pode removê-lo<\/em>.",
-    "mobile": "mobile",
+    "mobile": "Móvel",
     "model": "Modelo",
     "model-not-found": "Modelo não encontrado: %model%",
     "monday": "segunda-feira",
@@ -976,7 +976,7 @@
     "month-4": "Abril",
     "month-5": "Maio",
     "month-6": "Junho",
-    "month-7": "Julio",
+    "month-7": "Julho",
     "month-8": "Agosto",
     "month-9": "Setembro",
     "month-name": "Nome do mês",
@@ -1204,7 +1204,7 @@
     "products": "Produtos",
     "profile": "perfil",
     "profit-and-loss": "Perdas e Ganhos",
-    "profit-and-loss-balance": "Profit and loss accounts",
+    "profit-and-loss-balance": "Balanço de Perdas e Ganhos",
     "profits": "Lucros",
     "project": "Projeto",
     "projects": "Projetos",
@@ -1228,7 +1228,7 @@
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "Gerando mais itens...",
-    "rate": "rate",
+    "rate": "Taxa",
     "rates": "Preços",
     "re": "RE",
     "re-open": "Reabrir",
@@ -1391,7 +1391,7 @@
     "signature": "Assinatura",
     "simple": "Simples",
     "simplified": "Simplificada",
-    "size": "size",
+    "size": "Tamanho",
     "sketch": "Esboço",
     "sketch-invoice-warning": "Esta fatura ainda é um rascunho. Torne-a oficial alterando seu estado para emitido.",
     "small": "Pequeno",
@@ -1417,7 +1417,7 @@
     "start": "Inicio",
     "start-date": "Data de início",
     "start-hour": "Hora de início",
-    "start-time": "start-time",
+    "start-time": "Hora de início",
     "starting-cron": "Iniciando cron para FacturaScripts ...",
     "state": "Estado",
     "states": "Estados",
@@ -1478,7 +1478,7 @@
     "supplier-products": "Produtos do fornecedor",
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
-    "support": "Soporte",
+    "support": "Suporte",
     "supported-tax-re-subaccount": "Subconta de acréscimo suportada",
     "supported-tax-subaccount": "Subconta de imposto suportada",
     "surcharge": "Sobretaxa",
@@ -1585,7 +1585,7 @@
     "until-accounting-entry": "Até lançamento contábil",
     "until-date": "Até",
     "until-subaccount": "Até subconta",
-    "update": "update",
+    "update": "Atualizar",
     "update-stock": "Atualizar stock",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
@@ -1598,7 +1598,7 @@
     "uploaded-at": "Carregado em",
     "url": "Local na rede Internet",
     "use-gaps": "Usar intervalos",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Se desmarcar o uso de espaços em faturas e eliminar algum, o espaço ficará na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
     "user-and-config": "Utilizador e configuração",
     "users": "Comercial",
@@ -1655,7 +1655,7 @@
     "without-regularization": "Sem regularização",
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
-    "wizard": "wizard",
+    "wizard": "Assistente",
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
