--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1531,7 +1531,7 @@
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
-    "title-font-size": "Mida de font títol",
+    "title-font-size": "Mida de font del títol",
     "title-url": "Títul (URL)",
     "to": "Per a",
     "to-refund": "A devolver",
